--- a/public/index.html
+++ b/public/index.html
@@ -45,11 +45,11 @@
 
 </header>
 
-<div class="sections" onclick="location.href='https://polar-shore-16263.herokuapp.com/index.html';" style="cursor: pointer;">
+<div class="sections" onclick="location.href='justforyou.html';" style="cursor: pointer;">
   
   <section id="hero">
         <video autoplay muted loop id="myVideo">
-                <source src="assets/logo_video.mp4" type="video/mp4">
+                <source src="webMj.mp4" type="video/mp4">
               </video>
 
     <h1><span>Top Slide</span><br>Navigation</h1>
@@ -60,36 +60,29 @@
 
   </section><!-- END hero -->
 
-  <section class="row dark" id="sec01">
-    
-    <div class="content">
-      <h1 >Section 01</h1>
-      <p>Under the law, Pennsylvania residents who have a serious medical condition as certified by an approved physician are considered medical marijuana patients. Patients register for an ID card and use that card to obtain medical marijuana at Pennsylvania dispensaries. Caregivers also are Pennsylvania residents and are designated by patients to deliver medical marijuana to them, obtained at a Pennsylvania dispensary. Caregivers register for an ID card and must complete a background check. In Pennsylvania, approved forms of medical marijuana include: Pill; Oil; Topical forms, including gel, creams, or ointments; Tincture; Liquid; and A form medically appropriate for administration by vaporization or nebulization, including dry leaf or plant form for administration by vaporization. -PA Department of Health</p>
-    </div>
-  </section><!-- END row -->
-
+  
   <section class="row" id="sec02">
     <div class="content">
-      <h1>Section 02</h1>
+      <h1>About MEDICAL MARIJUANA</h1>
       <p>Under the law, Pennsylvania residents who have a serious medical condition as certified by an approved physician are considered medical marijuana patients. Patients register for an ID card and use that card to obtain medical marijuana at Pennsylvania dispensaries. Caregivers also are Pennsylvania residents and are designated by patients to deliver medical marijuana to them, obtained at a Pennsylvania dispensary. Caregivers register for an ID card and must complete a background check. In Pennsylvania, approved forms of medical marijuana include: Pill; Oil; Topical forms, including gel, creams, or ointments; Tincture; Liquid; and A form medically appropriate for administration by vaporization or nebulization, including dry leaf or plant form for administration by vaporization. -PA Department of Health</p>
     </div>
   </section><!-- END row -->
-
-  <section class="row dark" id="sec03">
-    <div class="content">
-      <h1>Section 03</h1>
-      <pUnder the law, Pennsylvania residents who have a serious medical condition as certified by an approved physician are considered medical marijuana patients. Patients register for an ID card and use that card to obtain medical marijuana at Pennsylvania dispensaries. Caregivers also are Pennsylvania residents and are designated by patients to deliver medical marijuana to them, obtained at a Pennsylvania dispensary. Caregivers register for an ID card and must complete a background check. In Pennsylvania, approved forms of medical marijuana include: Pill; Oil; Topical forms, including gel, creams, or ointments; Tincture; Liquid; and A form medically appropriate for administration by vaporization or nebulization, including dry leaf or plant form for administration by vaporization. -PA Department of Health</p>
-    </div>
-  </section><!-- END row -->
-
-  <section class="row" id="sec04">
-    <div class="content">
-      <h1>Section 04</h1>
-      <p>Under the law, Pennsylvania residents who have a serious medical condition as certified by an approved physician are considered medical marijuana patients. Patients register for an ID card and use that card to obtain medical marijuana at Pennsylvania dispensaries. Caregivers also are Pennsylvania residents and are designated by patients to deliver medical marijuana to them, obtained at a Pennsylvania dispensary. Caregivers register for an ID card and must complete a background check. In Pennsylvania, approved forms of medical marijuana include: Pill; Oil; Topical forms, including gel, creams, or ointments; Tincture; Liquid; and A form medically appropriate for administration by vaporization or nebulization, including dry leaf or plant form for administration by vaporization. -PA Department of Health</p>
-    </div>
-  </section><!-- END row -->
-  
+ 
   <!-- Scroll-to-Top -->
   <a href="#" class="scrollup"><i class="fa fa-arrow-circle-o-up"></i></a>
   
 </div><!-- END sections -->
+
+        <!-- Footer -->
+        <footer class="page-footer font-small green pt-4">
+
+  
+
+          <!-- Copyright -->
+          <div class="footer-copyright text-center py-3">© 2019 Copyright:
+            <a href="https://www.linkedin.com/in/brandon-gee-943119a8/">The WebMJ Group</a>
+          </div>
+          <!-- Copyright -->
+      
+        </footer>
+        <!-- Footer -->
