--- a/public/justforyou.html
+++ b/public/justforyou.html
@@ -1751,9 +1751,9 @@
                           <div class="text-center">
 
                             <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                            <button class="btn btn-success">Add to cart
+                            <!-- <button class="btn btn-success">Add to cart
                               <i class="fas fa-cart-plus ml-2" aria-hidden="true"></i>
-                            </button>
+                            </button> -->
                           </div>
                         </div>
                         <!-- /.Add to Cart -->
@@ -1997,9 +1997,9 @@
                           <div class="text-center">
 
                             <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                            <button class="btn btn-success">Add to cart
+                            <!-- <button class="btn btn-success">Add to cart
                               <i class="fas fa-cart-plus ml-2" aria-hidden="true"></i>
-                            </button>
+                            </button> -->
                           </div>
                         </div>
                         <!-- /.Add to Cart -->
@@ -2209,9 +2209,9 @@
                           <div class="text-center">
 
                             <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                            <button class="btn btn-success">Add to cart
+                            <!-- <button class="btn btn-success">Add to cart
                               <i class="fas fa-cart-plus ml-2" aria-hidden="true"></i>
-                            </button>
+                            </button> -->
                           </div>
                         </div>
                         <!-- /.Add to Cart -->
@@ -2452,9 +2452,9 @@
                           <div class="text-center">
 
                             <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                            <button class="btn btn-success">Add to cart
+                            <!-- <button class="btn btn-success">Add to cart
                               <i class="fas fa-cart-plus ml-2" aria-hidden="true"></i>
-                            </button>
+                            </button> -->
                           </div>
                         </div>
                         <!-- /.Add to Cart -->
@@ -2485,10 +2485,9 @@
               <img class="card-img-top" src="https://github.com/karatemaltliquor/WebMJ/blob/master/public/assets/images/cardpics/autism.jpg?raw=true"
                 alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title font-weight-bold">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-success btn-md btn-rounded" data-toggle="modal" data-target="#modalQuickView1">Button</a>
+                <h4 class="card-title font-weight-bold">Autism</h4>
+                <p class="card-text">Products we suggest for autism...</p>
+                <a class="btn btn-success btn-md btn-rounded" data-toggle="modal" data-target="#modalQuickView1">Learn more</a>
               </div>
             </div>
           </div>
@@ -2497,10 +2496,9 @@
               <img class="card-img-top" src="https://github.com/karatemaltliquor/WebMJ/blob/master/public/assets/images/cardpics/cancer.jpg?raw=true"
                 alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title font-weight-bold">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-success btn-md btn-rounded" data-toggle="modal" data-target="#modalQuickView">Button</a>
+                <h4 class="card-title font-weight-bold">Cancer</h4>
+                <p class="card-text">Products we suggest for cancer patients...</p>
+                <a class="btn btn-success btn-md btn-rounded" data-toggle="modal" data-target="#modalQuickView">Learn more</a>
               </div>
             </div>
           </div>
@@ -2509,10 +2507,9 @@
               <img class="card-img-top" src="https://github.com/karatemaltliquor/WebMJ/blob/master/public/assets/images/cardpics/chronic_p.jpg?raw=true"
                 alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title font-weight-bold">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-success btn-md btn-rounded" data-toggle="modal" data-target="#modalQuickViewCP">Button</a>
+                <h4 class="card-title font-weight-bold">Chronic Pain</h4>
+                <p class="card-text">Products we suggest for chronic pain...</p>
+                <a class="btn btn-success btn-md btn-rounded" data-toggle="modal" data-target="#modalQuickViewCP">Learn More</a>
               </div>
             </div>
           </div>
@@ -2521,10 +2518,9 @@
               <img class="card-img-top" src="https://github.com/karatemaltliquor/WebMJ/blob/master/public/assets/images/cardpics/crons.jpg?raw=true"
                 alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title font-weight-bold">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-success btn-md btn-rounded" data-toggle="modal" data-target="#modalQuickViewChrons">Button</a>
+                <h4 class="card-title font-weight-bold">Chron's Disease</h4>
+                <p class="card-text">Products we suggest for Chron's disease...</p>
+                <a class="btn btn-success btn-md btn-rounded" data-toggle="modal" data-target="#modalQuickViewChrons">Learn More</a>
               </div>
             </div>
           </div>
@@ -2533,10 +2529,9 @@
               <img class="card-img-top" src="https://github.com/karatemaltliquor/WebMJ/blob/master/public/assets/images/cardpics/pts.jpg?raw=true"
                 alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title font-weight-bold">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-success btn-md btn-rounded" data-toggle="modal" data-target="#modalQuickViewPtsd">Button</a>
+                <h4 class="card-title font-weight-bold">PTSD</h4>
+                <p class="card-text">Products we suggest for PTSD patients...</p>
+                <a class="btn btn-success btn-md btn-rounded" data-toggle="modal" data-target="#modalQuickViewPtsd">Learn More</a>
               </div>
             </div>
           </div>
@@ -2545,10 +2540,9 @@
               <img class="card-img-top" src="https://github.com/karatemaltliquor/WebMJ/blob/master/public/assets/images/cardpics/epic.jpg?raw=true"
                 alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title font-weight-bold">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-success btn-md btn-rounded" data-toggle="modal" data-target="#modalQuickViewEpi">Button</a>
+                <h4 class="card-title font-weight-bold">Seizures</h4>
+                <p class="card-text">Products we suggest for sufferers of seizures...</p>
+                <a class="btn btn-success btn-md btn-rounded" data-toggle="modal" data-target="#modalQuickViewEpi">Learn More</a>
               </div>
             </div>
           </div>
@@ -2557,10 +2551,9 @@
               <img class="card-img-top" src="https://github.com/karatemaltliquor/WebMJ/blob/master/public/assets/images/cardpics/gloc.jpg?raw=true"
                 alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title font-weight-bold">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-success btn-md btn-rounded" data-toggle="modal" data-target="#modalQuickViewGloc">Button</a>
+                <h4 class="card-title font-weight-bold">Glaucoma</h4>
+                <p class="card-text">Products we suggest for glaucoma patients...</p>
+                <a class="btn btn-success btn-md btn-rounded" data-toggle="modal" data-target="#modalQuickViewGloc">Learn More</a>
               </div>
             </div>
           </div>
@@ -2569,10 +2562,9 @@
               <img class="card-img-top" src="https://github.com/karatemaltliquor/WebMJ/blob/master/public/assets/images/cardpics/ibs.jpg?raw=true"
                 alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title font-weight-bold">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-success btn-md btn-rounded"  data-toggle="modal" data-target="#modalQuickViewIbs">Button</a>
+                <h4 class="card-title font-weight-bold">IBS</h4>
+                <p class="card-text">Products we suggest to treat IBS...</p>
+                <a class="btn btn-success btn-md btn-rounded"  data-toggle="modal" data-target="#modalQuickViewIbs">Learn More</a>
               </div>
             </div>
           </div>
@@ -2581,10 +2573,9 @@
                 <img class="card-img-top" src="https://github.com/karatemaltliquor/WebMJ/blob/master/public/assets/images/cardpics/neuro.jpg?raw=true"
                   alt="Card image cap">
                 <div class="card-body">
-                  <h4 class="card-title font-weight-bold">Card title</h4>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                  <a class="btn btn-success btn-md btn-rounded"  data-toggle="modal" data-target="#modalQuickViewNeuro">Button</a>
+                  <h4 class="card-title font-weight-bold">Neuropathy</h4>
+                  <p class="card-text">SProducts we suggest to treat neuropathy...</p>
+                  <a class="btn btn-success btn-md btn-rounded"  data-toggle="modal" data-target="#modalQuickViewNeuro">Learn More</a>
                 </div>
               </div>
             </div>
