--- a/public/index.html
+++ b/public/index.html
@@ -63,8 +63,8 @@
   
   <section class="row" id="sec02">
     <div class="content">
-      <h1>About MEDICAL MARIJUANA</h1>
-      <p>Under the law, Pennsylvania residents who have a serious medical condition as certified by an approved physician are considered medical marijuana patients. Patients register for an ID card and use that card to obtain medical marijuana at Pennsylvania dispensaries. Caregivers also are Pennsylvania residents and are designated by patients to deliver medical marijuana to them, obtained at a Pennsylvania dispensary. Caregivers register for an ID card and must complete a background check. In Pennsylvania, approved forms of medical marijuana include: Pill; Oil; Topical forms, including gel, creams, or ointments; Tincture; Liquid; and A form medically appropriate for administration by vaporization or nebulization, including dry leaf or plant form for administration by vaporization. -PA Department of Health</p>
+      <h1 class="text-center">About MEDICAL MARIJUANA</h1>
+      <p class="text-center">Under the law, Pennsylvania residents who have a serious medical condition as certified by an approved physician are considered medical marijuana patients. Patients register for an ID card and use that card to obtain medical marijuana at Pennsylvania dispensaries. Caregivers also are Pennsylvania residents and are designated by patients to deliver medical marijuana to them, obtained at a Pennsylvania dispensary. Caregivers register for an ID card and must complete a background check. In Pennsylvania, approved forms of medical marijuana include: Pill; Oil; Topical forms, including gel, creams, or ointments; Tincture; Liquid; and A form medically appropriate for administration by vaporization or nebulization, including dry leaf or plant form for administration by vaporization. -PA Department of Health</p>
     </div>
   </section><!-- END row -->
  
