media queries for small phones

--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,13 @@
             <a href="https://www.linkedin.com/in/brandon-gee-943119a8/">The WebMJ Group</a>
           </div>
           <!-- Copyright -->
+          <style>
+           @media screen and (max-width: 640px){
+
+#myVideo {
+  width: 200px;
+  height: 400px;
+}</style>
       
         </footer>
         <!-- Footer -->
