--- a/public/index2.html
+++ b/public/index2.html
@@ -6,7 +6,7 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
     <title>WebMJ</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device=width, initial-scale=1">
+    <!-- <meta name="viewport" content="width=device=width, initial-scale=1"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
         <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
@@ -22,7 +22,7 @@
     <header>
            <!--Main page video-->
             <video autoplay muted loop id="myVideo">
-                    <source src="assets/clouds_scrolling.mp4" type="video/mp4">
+                    <source url="https://webmj.herokuapp.com/webMj.mp4" type="video/mp4" id="myOtherVId">
                   </video>
         <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="#">C</a>
