--- a/public/justforyou.html
+++ b/public/justforyou.html
@@ -415,9 +415,9 @@
                       <div class="text-center">
 
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                        <button class="btn btn-success">Add to cart
+                        <!-- <button class="btn btn-success">Add to cart
                           <i class="fas fa-cart-plus ml-2" aria-hidden="true"></i>
-                        </button>
+                        </button> -->
                       </div>
                     </div>
                     <!-- /.Add to Cart -->
@@ -656,9 +656,9 @@
                       <div class="text-center">
 
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                        <button class="btn btn-success">Add to cart
+                        <!-- <button class="btn btn-success">Add to cart
                           <i class="fas fa-cart-plus ml-2" aria-hidden="true"></i>
-                        </button>
+                        </button> -->
                       </div>
                     </div>
                     <!-- /.Add to Cart -->
@@ -902,9 +902,9 @@
                       <div class="text-center">
 
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                        <button class="btn btn-success">Add to cart
+                        <!-- <button class="btn btn-success">Add to cart
                           <i class="fas fa-cart-plus ml-2" aria-hidden="true"></i>
-                        </button>
+                        </button> -->
                       </div>
                     </div>
                     <!-- /.Add to Cart -->
@@ -1146,9 +1146,9 @@
                       <div class="text-center">
 
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                        <button class="btn btn-success">Add to cart
+                        <!-- <button class="btn btn-success">Add to cart
                           <i class="fas fa-cart-plus ml-2" aria-hidden="true"></i>
-                        </button>
+                        </button> -->
                       </div>
                     </div>
                     <!-- /.Add to Cart -->
@@ -1390,9 +1390,9 @@
                       <div class="text-center">
 
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                        <button class="btn btn-success">Add to cart
+                        <!-- <button class="btn btn-success">Add to cart
                           <i class="fas fa-cart-plus ml-2" aria-hidden="true"></i>
-                        </button>
+                        </button> -->
                       </div>
                     </div>
                     <!-- /.Add to Cart -->
